<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="41dp">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="132dp"
        android:text="@string/txt_nombre"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/hnt_nombre"
        android:textSize="18sp"
        android:inputType="text"
        android:autofillHints="@string/hnt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toEndOf="@+id/txt_nombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_apellido"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <EditText
        android:id="@+id/edt_apellido"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/hnt_apellido"
        android:textSize="18sp"
        android:inputType="text"
        android:autofillHints="@string/hnt_apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toEndOf="@+id/txt_apellido"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre" />

    <TextView
        android:id="@+id/txt_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_numero"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellido" />

    <EditText
        android:id="@+id/edt_numero"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hnt_numero"
        android:textSize="18sp"
        android:inputType="number"
        android:autofillHints="@string/hnt_numero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/txt_celular"
        app:layout_constraintTop_toBottomOf="@+id/edt_apellido" />

    <TextView
        android:id="@+id/txt_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_direccion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_celular" />

    <EditText
        android:id="@+id/edt_direccion"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hnt_direccion"
        android:textSize="18sp"
        android:inputType="text"
        android:autofillHints="@string/hnt_direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toEndOf="@+id/txt_direccion"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero" />


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/hnt_email"
        android:hint="@string/hnt_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_direccion" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:text="@string/txt_email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_direccion" />

    <Button
        android:id="@+id/btn_camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_camara"
        app:layout_constraintStart_toEndOf="@+id/txt_foto"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <TextView
        android:id="@+id/txt_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="52dp"
        android:text="@string/txt_camara"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <ImageView
        android:id="@+id/img_camera"
        android:layout_width="125dp"
        android:layout_height="166dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/btn_camara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toEndOf="@+id/btn_camara"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/btn_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dir_descripcion"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_direccion" />

</androidx.constraintlayout.widget.ConstraintLayout>